--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -48,6 +48,9 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
+         <property name="contextMenuPolicy">
+          <enum>Qt::ContextMenuPolicy::CustomContextMenu</enum>
+         </property>
         </widget>
        </item>
        <item>
